package edu.xanderson.ritimoTask.model.entity;

public enum RoleType {
    ADMINISTRATOR,
    LEADER,
    MEMBER,
    GUEST,
    VISITOR
}
