package edu.xanderson.ritimoTask.model.entity;

public enum TaskStatus {
    TODO,
    IN_PROGRESS,
    DONE,
    CANCELED
}
